<resources>
    <string name="app_name">Abcd Job</string>
    <string name="file_provider_authority" translatable="false">abcdjob.workonline.com.qrcode.fileprovider</string>
    <string name="admob_app_id">ca-app-pub-5905387786531815~8657275834</string>
    <string name="please_wait">Please Wait…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostdatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="generate">Generate</string>
    <string name="history">History</string>
    <string name="wallet">Wallet</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="toolbar_title_generate">Generate QR Code</string>
    <string name="toolbar_title_scan">Code Scanner</string>
    <string name="toolbar_title_history">History</string>
    <string name="toolbar_title_wallet">Wallet</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="play_sound">Play Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="save_history">Save History</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hint_enter_your_text">Enter Your Text</string>
    <string name="error_provide_proper_content_and_type">Please provide proper information before generating code</string>
    <string name="error_barcode_content_limit">Barcode contents length should be between 1 and 80</string>
    <string name="error_qrcode_content_limit">QR Code contents length should be between 1 and 1000</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title_generated_qr_code">Generated QR Code</string>
    <string name="code_type">Type: %s</string>
    <string name="content">Content: %s</string>
    <string name="saved_the_code_successfully">Saved the code successfully</string>
    <string name="failed_to_save_the_code">failed to save the code</string>
    <string name="failed_to_share_the_code">failed to share the code</string>
    <string name="file_name_body">%s_%s</string>
    <string name="generated_qr_code_already_exists">Generated code already exists in the local storage</string>
    <string name="share_code_using">Share code using…</string>
    <string name="flash">Flash</string>
    <string name="scan_gallery">Scan Gallery</string>
    <string name="error_occured_while_scanning">Error occurred while scanning</string>
    <string name="error_could_not_load_the_image">Could not load the image</string>
    <string name="error_did_not_find_any_content">Did not find any content. Try again with different image</string>
    <string name="toolbar_title_scan_result">Scan Result</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="created_time">Created Time: %s</string>
    <string name="scanned_qr_code_content">Scanned QR code content</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="code_scan">%s Scan</string>
    <string name="no_item">No Data Found</string>
    <string name="get_value">Get value</string>
    <string name="toolbar_title_uploaded_image">Uploaded Image</string>
    <string name="dolor_sit_amet">Dolor sit amet consectetur adipiscing elit sed do</string>
    <string name="app_version_v1_1">App Version : v1.0.0</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="delete">Delete</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account_sign_up">Dont Have Account? Sign Up</string>
    <string name="string_dont_have_account_sign_up" />
    <string name="VerifyTitle">Hello There!</string>
    <string name="VerifysubTitle">Enter Your Desired Mobile Number To Get Verified</string>
    <string name="ReTitle">We need Your Details</string>
    <string name="ResubTitle">Fill  Your Basic Details</string>
    <string name="ok_message">ok</string>
    <string name="adsloading">Please wait</string>
    <string name="loading">loading</string>
    <string name="otp_verification_text">otp_verification_text</string>
    <string name="your_password_has_been_updated">Your Password Has Been Updated..!</string>
    <string name="login_now">Login Now</string>
    <string name="Congratulation">Congratulation</string>
    <string name="login_failed_message">LOGIN FAILED</string>
    <string name="Qrcodegentxn">Qr Code Generation</string>
    <string name="contact_detail">Please enter you contact details and admin will soon contact you.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="submit">Submit</string>
    <string-array name="widthrawals_array">

        
        <item>BANK ACCOUNT</item>
        <item>CASH PAYMENT</item>
        

    </string-array>
    <string-array name="planets_array">
        <item>-Select-</item>
        <item>App Issue</item>
        <item>Payment Pending</item>
        <item>Reffer Bonus Not Added</item>
        <item>Signup Isuue</item>
        <item>Other</item>

    </string-array>
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Version</string>
    <string name="about_us_version_text">2.1.5(1020)</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">darwinbark</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">info@darwinbark.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.darwinbark.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>
    <string name="about_us">About Us</string>
    <string name="refercontent">Refer Your Friend</string>
    <string name="refercontent2">Refer And Ean</string>
    <string name="pppolicy2">Refer And Ean</string>
    <string name="contact_us">Contact us</string>
    <string name="todo">TODO</string>
    <string name="term_privacy">By Logging / SigningUp in, you agree to our \nTerms of Service and Privacy Policy</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
</resources>