<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_centerInParent="true"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:scrollbars="none"
        android:foregroundGravity="center"
        android:layout_width="match_parent"
        android:background="@color/colorAccent2"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/toplog">


            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:transitionName="logo_image"
                app:srcCompat="@drawable/logom"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/welcome_back"
                android:textColor="@color/R"
                android:textSize="30sp"
                android:transitionName="logo_text"
                tools:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/slogan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/sign_in_to_continue"
                android:textSize="18sp"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:transitionName="logo_desc" />





        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneNo"
                    android:hint="@string/phone"
                    android:transitionName="phone_tran"
                    style="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_local_phone_24"
                        android:drawablePadding="6dp"
                        android:inputType="phone"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:transitionName="password_tran"
                    app:passwordToggleEnabled="true"
                    style="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="6dp"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/forgotbtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:text="@string/forgot_password"
                    android:textColor="#B388FF"
                    tools:ignore="RtlHardcoded" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:layout_gravity="center_vertical">

                    <CheckBox
                        android:id="@+id/checkPrivacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:buttonTint="@color/white"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvPrivacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@+id/checkPrivacy"

                        android:text="@string/term_privacy"
                        android:textColor="@color/white"
                        android:visibility="visible" />
                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />

                <Button

                    android:onClick="OpenSignUp"
                    android:id="@+id/signUp_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:text="@string/dont_have_account_sign_up"
                    android:textColor="@color/R"
                    android:transitionName="login_signup_tran"
                    tools:ignore="OnClick,RtlHardcoded,UsingOnClickInXml" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="25"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="7"/>

            <TextView
                android:id="@+id/contactUs"
                style="@style/viewParent.headerText.NoMode"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_18sdp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:text="@string/contact_us"
                android:textAlignment="center"
                android:textColor="#26A69A"
                android:textSize="13sp"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="7"/>

        </LinearLayout>



    </LinearLayout>
    </ScrollView>
</layout>

