<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent2"
        tools:ignore="UselessParent">


        <abcdjob.workonline.com.qrcode.helpers.widget.Basestatusbar
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            app:layout_constraintVertical_chainStyle="spread_inside" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_bar"
            android:layout_marginTop="-2dp"
            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:title="Contact us" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            tools:ignore="MissingConstraints">

          <LinearLayout
              android:padding="10dp"
              android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/contact_detail"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--    <include layout="@layout/addmob_banner_layout" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:background="@color/transparent"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/contName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/contact_us_bg"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/black_70_percent"
                        android:textSize="16sp"
                        android:theme="@style/editText_style" />

                    <EditText
                        android:id="@+id/contfone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/contact_us_bg"
                        android:hint="Contact Number"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/black_70_percent"
                        android:textSize="16sp"
                        android:theme="@style/editText_style" />

                    <EditText
                        android:id="@+id/contEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/contact_us_bg"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/black_70_percent"
                        android:textSize="16sp"
                        android:theme="@style/editText_style" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <TextView
                            android:id="@+id/textView_subject_contact_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/subject"
                            android:textColor="@color/black_70_percent"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_below="@+id/textView_subject_contact_us"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/contact_us_bg">

                            <Spinner
                                android:id="@+id/spinner_contact_us"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@color/transparent"
                                android:prompt="@string/app_name" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/down_arrow" />

                        </RelativeLayout>

                    </RelativeLayout>

                    <EditText
                        android:id="@+id/contmsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/contact_us_bg"
                        android:gravity="top"
                        android:hint="@string/your_message"
                        android:maxLines="10"
                        android:minLines="5"
                        android:padding="10dp"
                        android:scrollbars="vertical"
                        android:overScrollMode="always"
                        android:ellipsize="start"
                        android:textColor="@color/white"
                        android:textColorHint="@color/black_70_percent"
                        android:textSize="16sp"
                        android:theme="@style/editText_style" />

                    <Button
                        android:id="@+id/contbtn"
                        android:layout_width="140dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/mybutton"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:cornerRadius="25dp" />

                </LinearLayout>
          </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</layout>